--- a/mohataseem/src/sections/Contact/ContactStyles.module.css
+++ b/mohataseem/src/sections/Contact/ContactStyles.module.css
@@ -1,6 +1,8 @@
+
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
@@ -8,6 +10,7 @@ form {
   display: flex;
   flex-direction: column;
   gap: 30px;
+  max-width: 100%;
 }
 
 textarea,
@@ -15,6 +18,13 @@ input:not([type='submit']) {
   height: 50px;
   padding-left: 16px;
   width: 250px;
+  border-radius: 20px;
+  border: 1px solid #888;
+  background-color: var(--background-color);
+  color: var(--form-text-color);
+  box-sizing: border-box;
+  font-size: 16px;
+  transition: all 200ms ease-in-out;
 }
 
 textarea {
@@ -23,20 +33,11 @@ textarea {
   height: 250px;
 }
 
-input,
-textarea {
-  border-radius: 20px;
-  border: #888 1px solid;
-  box-sizing: border-box;
-  justify-self: center;
-  background-color: var(--background-color);
-  color: var(--form-text-color);
-}
-
 ::placeholder {
   color: var(--form-text-color);
 }
 
+/* submit btn */
 input[type='submit'] {
   background-color: var(--btn-color);
   color: var(--btn-text-color);
@@ -47,8 +48,9 @@ input[type='submit'] {
   font-size: 20px;
   font-weight: bold;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
   margin: auto;
+  cursor: pointer;
+  transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
 }
 
 input[type='submit']:hover {
@@ -60,7 +62,8 @@ input[type='submit']:active {
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
 }
 
-@media (width >= 800px) {
+/* for responsiveness */
+@media (min-width: 800px) {
   textarea,
   input:not([type='submit']) {
     width: 600px;
@@ -71,7 +74,7 @@ input[type='submit']:active {
   }
 }
 
-@media (width >= 1400px) {
+@media (min-width: 1400px) {
   textarea,
   input:not([type='submit']) {
     width: 800px;
